# icegen

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  Makefile  README.md  RUST.md  build.rs  docker-compose.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/generator/: base.rs  logs.rs  metrics.rs  mod.rs  otel.rs
src/message/: attributes.rs  encoder.rs  fake_data.rs  generator.rs  metrics_generator.rs  metrics_types.rs  mod.rs  plan.rs  types.rs
src/pb/: mod.rs  opentelemetry.proto.collector.logs.v1.rs  opentelemetry.proto.collector.metrics.v1.rs  opentelemetry.proto.logs.v1.rs  opentelemetry.proto.metrics.v1.rs
src/transport/: grpc.rs  http.rs  mod.rs  noop.rs  protobuf.rs  types.rs
tests/: integration_test.rs
